update homepage and about me

--- a/_posts/2021-10-31-about-me.md
+++ b/_posts/2021-10-31-about-me.md
@@ -2,10 +2,12 @@
 title: Dobrica Savic
 ---
 
-Hi! I'm a software/devops engineer currently working at <a href="https://getpenta.com/en">Penta</a>.<br>
+Hi! I'm a Software Engineer/SRE currently working at <a href="https://sysdig.com/">Sysdig</a>.<br>
 
 A couple of years ago, I was mostly working with Javascript. As I started investing effort to learn how to actually run the applications I write, I was faced with a whole new world of exciting stuff I knew almost nothing about. A couple of Dockerfiles and k8s manifests later, I started working full time in an infrastructure team.<br>
 
 Nowdays I'm trying to expand both my infrastructure and development skills with the aim to get better at writing infrastructure tooling, as I feel this beautifully blends the two loves I have.<br>
 
 You can reach out to me on <a href="https://linkedin.com/in/hpdobrica">Linkedin</a>, or you can shoot me an <a href="mailto:hpdobrica@gmail.com">email</a> if that's more your kind of thing.
+
+You can also find me on <a href="https://open.spotify.com/user/8wmt7mvdy3kqur2bnkphnj2me?si=3114df44187a4bdd">Spotify</a>, <a href="https://www.last.fm/user/hpdobrica">Last.fm</a>, <a href="https://www.strava.com/athletes/103671422">Strava</a>, <a href="https://goodreads.com/hpdobrica">Goodreads</a>. You could also theoretically find me on Reddit, but I won't make it easy for you :)
